# RubikCube

./: .gitignore  CMakeLists.txt  Doxyfile  box.cpp  box.h  main.cpp  resources.cfg  rotator.cpp  rotator.h  rubik.cpp  rubik.h  shell.nix  skybox.material
docs/html/: annotated.html  box_8h_source.html  classRBox-members.html  classRBox.html  classRotator-members.html  classRotator.html  classRubikApp-members.html  classRubikApp.html  classRubikCube-members.html  classRubikCube.html  classes.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  rotator_8h_source.html  rubik_8h_source.html  structRBox_1_1RFace-members.html  structRBox_1_1RFace.html
docs/html/search/: all_0.js  all_1.js  all_2.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js
docs/latex/: CMakeLists_8txt.tex  annotated.tex  box_8cpp.tex  box_8h.tex  classRBox.tex  classRotator.tex  classRubikApp.eps  classRubikApp.tex  classRubikCube.tex  files.tex  hierarchy.tex  main_8cpp.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  rotator_8cpp.tex  rotator_8h.tex  rubik_8cpp.tex  rubik_8h.tex  structRBox_1_1RFace.tex
